--- a/app/src/main/res/layout/layout_app_list_item.xml
+++ b/app/src/main/res/layout/layout_app_list_item.xml
@@ -5,41 +5,45 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-
     <TextView
-        android:id="@+id/notes_subject"
+        android:id="@+id/app_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="10dp"
         android:layout_marginTop="10dp"
         android:textColor="@color/black"
         android:textSize="18sp"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="15dp"
+        app:layout_constraintStart_toEndOf="@id/appIconImageView"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Subject One" />
 
     <TextView
-        android:id="@+id/notes_content"
-        android:layout_width="match_parent"
+        android:id="@+id/package_name"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="10dp"
         android:layout_marginTop="10dp"
         android:ellipsize="end"
+        android:layout_marginStart="15dp"
         android:maxLines="2"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/notes_subject"
+        app:layout_constraintEnd_toStartOf="@id/cbLabel_single"
+        app:layout_constraintStart_toEndOf="@id/appIconImageView"
+        app:layout_constraintTop_toBottomOf="@id/app_title"
         tools:text="notes_contentnotes_contentnotes_contentnotes_contentnotes_contentnotes_contentnotes_contentnotes_contentnotes_contentnotes_contentnotes_contentnnotes_contentnotes_contentnotes_contentnotes_contentotes_content" />
 
-
-    <TextView
-        android:id="@+id/time_tv"
+    <CheckBox
+        android:id="@+id/cbLabel_single"
+        style="@style/CustomCheckbox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="10dp"
-        app:layout_constraintBottom_toBottomOf="@id/notes_subject"
+        android:layout_gravity="end"
+        android:layout_marginHorizontal="0dp"
+        android:clickable="false"
+        android:focusable="false"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/notes_subject"
-        tools:text="Dec 20, 18:00" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <View
         android:id="@+id/view_divider"
@@ -47,7 +51,15 @@
         android:layout_height="1dp"
         android:layout_marginTop="10dp"
         android:background="@color/grey"
-        app:layout_constraintTop_toBottomOf="@id/notes_content" />
+        app:layout_constraintTop_toBottomOf="@id/package_name" />
 
+    <ImageView
+        android:id="@+id/appIconImageView"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginStart="10dp"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
