--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -46,6 +46,14 @@
             app:layout_constraintTop_toBottomOf="@id/content_et" />
 
 
+        <Button
+            android:id="@+id/ok_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/save"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/select_apps_btn" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
